Adjust em-uso card gradient styling

--- a/style.html
+++ b/style.html
@@ -1317,10 +1317,10 @@
             background-color: var(--em-uso-base);
             background-image: repeating-linear-gradient(135deg,
                 rgba(255, 255, 255, 0.1) 0,
-                rgba(255, 255, 255, 0.1) 12px,
-                transparent 12px,
-                transparent 24px);
-            color: var(--em-uso-text);
+                rgb(255 255 255 / 0%) 12px,
+                #0000000d 12px,
+                #00000000 24px);
+            color: #7f6262;
             box-shadow: 0 14px 32px color-mix(in srgb, var(--em-uso-border-color) 30%, transparent);
         }
         .armario-card.em-uso::before {
