Add PDF export with dual reservation cards

--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,7 @@
                 </div>
                 <div class="modal-actions print-actions">
                     <button type="button" class="btn btn-secondary" id="impressao-reserva-fechar">Fechar</button>
+                    <button type="button" class="btn btn-primary" id="impressao-reserva-pdf">Baixar PDF</button>
                     <button type="button" class="btn btn-primary" id="impressao-reserva-print">Baixar PNG</button>
                 </div>
             </div>
