--- a/style.html
+++ b/style.html
@@ -3054,8 +3054,9 @@
             flex-wrap: wrap;
         }
         .prontuario-input-group .form-control {
-            flex: 1;
-            min-width: 0;
+            flex: 0 1 320px;
+            min-width: 220px;
+            max-width: 360px;
         }
         .prontuario-input-group .btn {
             white-space: nowrap;
